# AI4SE-Mutation-Testing

./: .editorconfig  .gitignore  Dockerfile  LICENSE  README.md  ai4se.drawio  main.py  pyproject.toml  requirements.txt
annotations/: pom.xml
dataset/collector/: README.md  pyproject.toml
dataset/collector/src/collector/: __init__.py  __main__.py  cli.py  sample.py  source.py
dataset/collector/src/collector/strategy/: __init__.py  strategy.py  test_mods.py
dataset/collector/tests/: test_source_compare.py
diagrams/: generate.puml  generate.sh  tests.puml
example/: pom.xml  test.lua
mutator/: test.py
notes/: TODO.md  research.md
plugin/: pom.xml
src/: test_import.py
src/mutator/: __init__.py  __main__.py  cli.py  dependency_injector.py  mutation.py  mutator.py  project.py  result.py  source.py  store.py  test.py
src/mutator/ai/: __init__.py  llm.py  llm_result.py  llm_stats.py  transform.py
src/mutator/ai/limiter/: function.py  limiter.py  special_tokens.py
src/mutator/cli/: __init__.py  analyze.py  collect.py  generate.py  inspect.py  spinner.py  stats.py  test.py  train.py
src/mutator/collect/: __init__.py  sample.py  strategy.py  test_mods.py
src/mutator/generator/: __init__.py  config.py  doc_string_based.py  docstring.py  forced_branch.py  full_body.py  full_body_based.py  generator.py  identity.py  infilling.py  prefix.py  prompt.py  repeat.py  rewrite.py  simple.py
src/mutator/helper/: __init__.py  debug.py  decorator.py  metrics.py  pattern.py  timed.py  tries.py
src/mutator/inspect/: analyze.py  app.py  module_view.py
src/mutator/runner/: __main__.py  injector.py
src/mutator/treesitter/: context.py  node.py  python.py  tree_walker.py
src/mutator_runner/: __init__.py  injector.py
test/: test_import.py
tests/: test_context.py  test_filter.py  test_find_mods.py  test_import.py  test_infilling.py  test_limiter.py  test_source_compare.py
(+10 files in other folders)
